--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,6 @@
     RewriteEngine On
     RewriteCond   %{REQUEST_FILENAME} !-d
     RewriteCond   %{REQUEST_FILENAME} !-f
+    RewriteCond   %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
     RewriteRule   ^((?s).*)$ index.php?_url=/$1 [QSA,L]
 </IfModule>
